# quartz

quartz-editor/: Cargo.toml
quartz-editor/src/: editor_state.rs  main.rs  project.rs  ui.rs
quartz-editor/src/shaders/: egui.frag  egui.vert  pick.frag  pick.vert
quartz-engine/: Cargo.toml
quartz-engine/crates/builtins/: Cargo.toml
quartz-engine/crates/builtins/src/: lib.rs
quartz-engine/crates/builtins/src/render3d/: mod.rs  pbr.frag  pbr.vert  shadow.frag  shadow.vert
quartz-engine/crates/core/: Cargo.toml
quartz-engine/crates/core/src/: bridge.rs  component.rs  editor_ui.rs  game_state.rs  inspect.rs  lib.rs  macros.rs  node.rs  plugin.rs  scene.rs  transform.rs  tree.rs  types.rs
quartz-engine/crates/core/src/reflect/: mod.rs  serde.rs
quartz-engine/crates/derive/: Cargo.toml
quartz-engine/crates/derive/src/: inspect.rs  lib.rs  reflect.rs
quartz-engine/derive/: Cargo.toml
quartz-engine/derive/src/: lib.rs
quartz-engine/src/: bridge.rs  component.rs  editor_ui.rs  game_state.rs  lib.rs  node.rs  plugin.rs  state.rs  tree.rs
quartz-engine/src/reflect/: mod.rs
quartz-framework/: Cargo.toml
quartz-framework/examples/: game.rs  shader.vert
quartz-framework/src/: app.rs  input.rs  lib.rs  mouse.rs  state.rs  window.rs
quartz-render/: Cargo.toml  LICENSE
quartz-render/derive/: Cargo.toml
quartz-render/derive/src/: lib.rs  uniform.rs
quartz-render/examples/: game.rs  main_image.frag  main_image.vert  post.frag  post.vert
quartz-render/src/: app.rs  bindings.rs  color.rs  instance.rs  lib.rs  mouse.rs  projection.rs  render_ctx.rs  render_pass.rs  render_pipeline.rs  sampler.rs  shader.rs  state.rs  texture.rs  texture_format.rs  transform.rs  uniform.rs  vertex.rs  window.rs
quartz-render/src/render/: buffer.rs  mod.rs  projection.rs  render_ctx.rs  render_pass.rs  render_pipeline.rs  render_resource.rs  sampler.rs  shader.rs  texture.rs  texture_format.rs  uniform.rs  uniforms.rs  vertex.rs
testproject/: .gitignore  Cargo.toml  scene.scn
testproject/src/: lib.rs  shader.vert
