[package]
name = "quartz-editor"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quartz-framework = { path = "../quartz-framework" }
quartz-engine = { path = "../quartz-engine", features = ["editor_bridge"], default-features = false }
egui = "0.12"
serde = "1.0"
serde_cbor = "0.11"
ron = "0.6.4"
clap = "3.0.0-beta.2"
log = "0.4"
simple_logger = "1.11.0"
libloading = "0.7"

[dev-dependencies]
spin = "0.9"