[package]
name = "quartz-engine"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive"]

[dependencies]
quartz-render = { path = "../quartz-render" }
quartz-engine-derive = { path = "derive" }
egui = "0.12"
libloading = { version = "0.7", optional = true }
serde = { version = "1.0.126", features = ["derive"] }
erased-serde = "0.3.13"

[features]
default = ["editor_bridge"]
editor_bridge = ["libloading"]
