[package]
name = "quartz-engine"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
quartz-engine-core = { path = "crates/core" }

[features]
default = ["editor_bridge"]
editor_bridge = ["quartz-engine-core/editor_bridge"]
