[package]
name = "quartz-engine"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
quartz-engine-core = { path = "crates/core" }
quartz-engine-derive = { path = "crates/derive" }
quartz-engine-builtins = { path = "crates/builtins", optional = true }

[features]
default = ["builtins", "editor_bridge"]
builtins = ["quartz-engine-builtins"]
editor_bridge = ["quartz-engine-core/editor_bridge"]
