[package]
name = "quartz-render"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive"]

[dependencies]
quartz-render-derive = { path = "derive" }
winit = "0.25"
shaderc = "0.7.2"
wgpu = { version = "0.8", features = ["trace", "replay"] }
glam = { version = "0.15.2", features = ["bytemuck", "serde"] }
futures = "0.3"
log = "0.4"
spirv-reflect = "0.2"
bytemuck = { version = "1.5.1", features = ["derive"] }
anyhow = "1.0.40"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
image = "0.23"
