[package]
name = "quartz-engine-core"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

[dependencies]
quartz-render = { git = "https://github.com/ChangeCaps/quartz", branch = "main" }
quartz-engine-derive = { path = "../derive" }
egui = "0.12"
libloading = { version = "0.7", optional = true }
serde = { version = "1.0.126", features = ["derive"] }
erased-serde = "0.3.13"
log = "0.4"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }

[features]
default = ["editor_bridge"]
editor_bridge = ["libloading"]